# FerrOS

./: .gitignore  Cargo.toml  README.md  roadmap.md  rust-toolchain.toml
.cargo/: config.toml
docs/src/: SUMMARY.md  roadmap.md
scripts/: launch_qemu.sh
src/: efi.rs  font.rs  gdt.rs  graphics.rs  interrupts.rs  main.rs  memory.rs
src/memory/: allocator.rs  mapper.rs  mod.rs
